fix <For/> loop + align text + cleanup

--- a/style/main.scss
+++ b/style/main.scss
@@ -2,3 +2,22 @@ body {
 	font-family: sans-serif;
 	text-align: center;
 }
+
+@keyframes flash {
+    0% {
+        border-color: white;
+        opacity:0.5;
+    }
+    100% {
+        border-color: default;
+        opacity: default;
+    }
+}
+
+.flash {
+	animation: 0.6s ease-out 1 flash;
+}
+
+.bg-main {
+	background-color: #301934 !important;
+}
